--- a/7.3/Dockerfile
+++ b/7.3/Dockerfile
@@ -56,7 +56,8 @@ RUN docker-php-ext-install \
     xml \
     gd \
     zip \
-    bcmath
+    bcmath \
+    exif
 
 # Install composer
 ENV COMPOSER_HOME /composer
