--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -55,7 +55,8 @@ RUN docker-php-ext-install \
     xml \
     gd \
     zip \
-    bcmath
+    bcmath \
+    exif
 
 # Install composer
 ENV COMPOSER_HOME /composer
